[package]
name = "cdk-spilman-client-integration-tests"
version = "0.15.1"
edition = "2021"
license = "MIT"
publish = false
description = "Integration tests for SpilmanClientBridge against SpilmanBridge"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bip39 = "2.0"
cdk = { git = "https://github.com/cashubtc/cdk.git", rev = "63866dc6d7da9796c75365cde97157d464331da1", package = "cdk", default-features = false, features = ["mint", "wallet"] }
cdk-common = { git = "https://github.com/cashubtc/cdk.git", rev = "63866dc6d7da9796c75365cde97157d464331da1", package = "cdk-common" }
cdk-fake-wallet = { git = "https://github.com/cashubtc/cdk.git", rev = "63866dc6d7da9796c75365cde97157d464331da1", package = "cdk-fake-wallet" }
cdk-sqlite = { git = "https://github.com/cashubtc/cdk.git", rev = "63866dc6d7da9796c75365cde97157d464331da1", package = "cdk-sqlite", default-features = false, features = ["mint", "wallet"] }
cdk-spilman = { path = "../cdk-spilman", features = ["wallet"] }
cashu = { git = "https://github.com/cashubtc/cdk.git", rev = "63866dc6d7da9796c75365cde97157d464331da1", package = "cashu" }
hex = "0.4"
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]

[lints]
workspace = true
