[package]
name = "cdk-spilman-client-integration-tests"
version = "0.15.1"
edition = "2021"
license = "MIT"
publish = false
description = "Integration tests for SpilmanClientBridge against SpilmanBridge"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bip39 = "2.0"
cdk = { workspace = true, features = ["mint", "wallet"] }
cdk-common.workspace = true
cdk-fake-wallet.workspace = true
cdk-sqlite = { workspace = true, features = ["mint", "wallet"] }
cdk-spilman = { path = "../cdk-spilman", features = ["wallet"] }
cdk-spilman-test-mint = { path = "../cdk-spilman-test-mint" }
cashu.workspace = true
hex = "0.4"
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]

[lints]
workspace = true
