[package]
name = "cdk-spilman-go"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "cdk_spilman_go"

[dependencies]
cashu = { git = "https://github.com/cashubtc/cdk.git", rev = "63866dc6d7da9796c75365cde97157d464331da1", package = "cashu", default-features = false }
cdk-spilman = { path = "../cdk-spilman", version = "=0.15.1", features = ["wallet"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
anyhow = "1.0"
bitcoin = "0.32"
