[package]
name = "cdk-spilman-go"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "cdk_spilman_go"

[dependencies]
cashu.workspace = true
cdk-spilman = { path = "../cdk-spilman", version = "=0.15.1", features = ["wallet"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
anyhow = "1.0"
bitcoin = "0.32"
