[package]
name = "cdk-spilman-interop-tests"
version = "0.15.1"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bip39 = "2.0"
cdk = { workspace = true, features = ["mint", "wallet"] }
cdk-common.workspace = true
cdk-fake-wallet.workspace = true
cdk-sqlite = { workspace = true, features = ["mint", "wallet"] }
cdk-spilman = { path = "../cdk-spilman", features = ["wallet"] }
hex = "0.4"
rand = "0.9.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { workspace = true, features = ["full"] }
serde_json.workspace = true

[lints]
workspace = true
