[package]
name = "cdk-spilman-test-mint"
version = "0.15.1"
edition = "2021"
license = "MIT"
description = "Minimal standalone test mint for Spilman flows"
publish = false

[[bin]]
name = "cdk-spilman-test-mintd"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
bip39.workspace = true
cdk.workspace = true
cdk-axum.workspace = true
cdk-common.workspace = true
cdk-fake-wallet.workspace = true
cdk-spilman = { path = "../cdk-spilman" }
cdk-sqlite.workspace = true
cashu.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
