[package]
name = "cdk-wasm"
version = "0.15.1"
edition = "2021"
license = "MIT"
repository.workspace = true
description = "WASM bindings for Cashu payment channels"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cashu = { git = "https://github.com/cashubtc/cdk.git", rev = "63866dc6d7da9796c75365cde97157d464331da1", package = "cashu", default-features = false }
cdk-spilman = { path = "../cdk-spilman", version = "=0.15.1", features = ["wallet"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
async-trait = "0.1"
bitcoin = { version = "0.32", default-features = false }
hex = "0.4"
uuid = { workspace = true, features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
