[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cdk-spilman-kit"
version = "0.1.0"
description = "Integration kit for CDK Spilman payment channels (Flask/FastAPI)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.32.3",
    "PyYAML>=6.0.2",
]

[project.optional-dependencies]
flask = ["flask>=3.0.3"]
fastapi = ["fastapi>=0.115.8"]
dev = ["pytest>=8.3.4"]

[tool.setuptools]
packages = ["cdk_spilman_kit", "cdk_spilman_kit.ext"]

[tool.pytest.ini_options]
testpaths = ["tests"]
